--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ github_username:  hemangsk
 paginate: 5
 theme-dark: true #Set to true to change to dark website theme
 
-plugins: [jekyll-paginate, kramdown]
+plugins:
+  - [jekyll-paginate, kramdown]
+  - jekyll-sitemap
+  
 # Build settings
 markdown: kramdown
