--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,102 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+skin: "/assets/css/skins/default.css"
+locale: en-US
+title: CodeJin19's Blog
+email: codejin19@gmail.com
+description: "codejin의 블로그"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://codejin19.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+logo: # path of site logo, e.g. "/images/logo.png"
+date_format: "%B %-d, %Y"
+read_time: true # reading time estimates
+words_per_minute: 200 # 200
+mathjax:
+  enable: true # MathJax equations, e.g. true, false (default)
+  combo:  "tex-svg" # "tex-svg" (default), "tex-mml-chtml", etc.: docs.mathjax.org/en/latest/web/components/combined.html
+  tags:  "ams" # "none", "ams" (default), "all""
+google_fonts:
+  - name: "Source Sans Pro"
+    weights: "400,400i,700,700i"
+  - name: "Lora"
+    weights: "400,400i,700,700i"
+google_analytics: # Google Analytics id, e.g. "UA-NNNNNNNN-N"
+disqus:
+  shortname: # Disqus shortname, e.g. "my_disqus_shortname"
+twitter:
+  username: jekyllrb
 github_username:  jekyll
+google_site_verification:
+
+# Liquid
+liquid:
+  error_mode: strict
 
 # Build settings
-theme: minima
+permalink: /:categories/:title/
+mrkdown: kramdown
+feed:
+  path: atom.xml
+
+# theme: minima
+# theme: jekyll-theme-so-simple
+remote_theme: "mmistakes/so-simple-theme@3.2.0"
+
+# Pagination - https://jekyllrb.com/docs/pagination
+paginate: 10
+paginate_path: /page:num/
+
+# Search
+search_full_content: false
+
+# Taxnomoy pages
+category_archive_path: "/categories/#"
+tag_archive_path: "/tags/#"
+
 plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
   - jekyll-feed
+  - jekyll-paginate
+  - jekyll-redirect-from
+
+# Collections
+collections:
+  recipes:
+    output: true
+    premalink: /:collecion/:path/
+
+# Front Matter Defaults
+defaults:
+  # Posts defaults
+  - scope:
+      path: "_posts"
+      type: posts
+    values:
+      layout: post
+      comments: true
+      share: true
+
+# Site Author
+author:
+  name: CodeJin19
+  picture:
+  email: codejin19@gmail.com
+  twitter:
+  links:
+    - title: Github
+      url: https://github.com/codejin19
+      icon: fab fa-github-square
+
+# Footer Links
+footer_links:
+  - title: Github
+    url: https://github.com/codejin19
+    icon: fab fa-github-square
+  - title: Feed
+    url: atom.xml
+    icon: fas fa-rss-square
 
 # Exclude from processing.
 # The following items will not be processed, by default.
