update authors and scss to remove italics

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Sample Authors
 # Remove file or replace with your own
 
-Billy Rick:
+CodeJin19:
   name: CodeJin19
   picture: /images/bio-photo-2.jpg
   twitter: ""
